2013-05-22 Hirofumi Kosaka <kosaka@rworks.jp>

	* pandoradb.sql: (workaround to avoid mysql's warning
	'Specified key was too long; max key length is 767 bytes'
	(warning code=1071).

2013-05-21 Miguel de Dios <miguel.dedios@artica.es>

	* include/styles/datepicker.css,
	include/styles/jquery-ui-1.10.0.custom.css: change the style to
	show better the datepicker and timepicker.

2013-05-21 Miguel de Dios <miguel.dedios@artica.es>

	* include/functions_reporting.php, include/functions.php: improved
	the source code style.

2013-05-21 Miguel de Dios <miguel.dedios@artica.es>

	* include/functions_modules.php: fixed false error when update the
	modules and try to enabled or disabled yet disabled or enabled.
	
	Fixes: #2225

2013-05-21 Miguel de Dios <miguel.dedios@artica.es>

	* operation/search_main.php, operation/search_agents.getdata.php:
	changed the source code, now it uses the page size to show the
	agents in first page, fixed the list of icons, now show graphs and
	set in correct english this icons. And added a footpage in the list
	of agents to show if it is all or not.
	
	Fixes: #2227
	
	* include/constants.php: erased constants to count agents to show
	in the search.

2013-05-21 Miguel de Dios <miguel.dedios@artica.es>

	* operation/agentes/gis_view.php: fixed the title of agent in the
	list of positions.

2013-05-20  Sergio Martin <sergio.martin@artica.es>

	* include/styles/pandora.css
	include/functions_groups.php
	include/functions_graph.php
	include/functions_reporting.php
	operation/search_results.php
	operation/agentes/estado_generalagente.php
	operation/agentes/ver_agente.php
	operation/agentes/group_view.php
	operation/servers/recon_view.php
	images/min.png
	images/max.png
	images/agent.png
	images/cross_undo.png
	images/policies_brick.png
	images/agent_warning.png
	images/rosette.png
	images/darrowright.png
	images/god5.png
	images/module_critical.png
	images/filter.png
	images/help.png
	images/darrowup.png
	images/wrench_orange.png